feat: replace OpenAPI 2.0 by OpenApi3 (OAS3)
BREAKING CHANGE: The API specification changed
